<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kidscademy.quiz.activity.GameActivity">

    <include layout="@layout/compo_page_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- header for score, credits and current number of solved instrument -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/game_score"
                style="@style/Text.Label.Large"
                android:layout_alignParentStart="true"
                android:textColor="@color/green_300"
                tools:text="1234" />

            <TextView
                android:id="@+id/game_score_separator"
                style="@style/Text.Label.Separator.Large"
                android:layout_toEndOf="@id/game_score" />

            <TextView
                android:id="@+id/game_credit"
                style="@style/Text.Label.Large"
                android:layout_toEndOf="@id/game_score_separator"
                android:textColor="@color/green_300"
                tools:text="32" />

            <TextView
                android:id="@+id/game_brands_count"
                style="@style/Text.Label.Large"
                android:layout_alignParentEnd="true"
                android:textColor="@color/blue_300"
                tools:text="10" />

            <TextView
                android:id="@+id/game_level_separator"
                style="@style/Text.Label.Separator.Large"
                android:layout_toStartOf="@id/game_brands_count" />

            <TextView
                android:id="@+id/game_solved_brands_count"
                style="@style/Text.Label.Large"
                android:layout_toStartOf="@id/game_level_separator"
                android:textColor="@color/blue_300"
                tools:text="2" />
        </RelativeLayout>

        <!-- challenged instrument picture and accumulated points -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/black_TA0"
            android:padding="20dp">

            <ImageView
                android:id="@+id/game_challenge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                tools:src="@drawable/piano" />

            <TextView
                android:id="@+id/game_score_plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="100dp"
                android:visibility="invisible" />
        </FrameLayout>

        <com.kidscademy.quiz.view.AnswerView
            android:id="@+id/game_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_T80"
            android:gravity="center">

            <TextView
                style="@style/Text.Letter.XLarge.Inverse"
                tools:text="_" />

            <TextView
                style="@style/Text.Letter.XLarge.Inverse"
                tools:text="_" />

            <TextView
                style="@style/Text.Letter.XLarge.Inverse"
                tools:text="D" />

            <TextView
                style="@style/Text.Letter.XLarge.Inverse"
                tools:text="_" />

            <TextView
                style="@style/Text.Letter.XLarge.Inverse"
                tools:text="_" />

            <TextView
                style="@style/Text.Letter.XLarge.Inverse"
                tools:text="_" />

        </com.kidscademy.quiz.view.AnswerView>

        <include
            android:id="@+id/game_keyboard"
            layout="@layout/compo_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/keyboard_vertical_margin"
            android:layout_marginTop="@dimen/keyboard_vertical_margin" />
    </LinearLayout>

    <!-- FAB menu -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.kidscademy.quiz.view.RandomColorFAB
            android:id="@+id/game_fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:elevation="6dp"
            app:fabSize="normal"
            app:srcCompat="@drawable/action_add" />

        <com.kidscademy.quiz.view.RandomColorFAB
            android:id="@+id/game_fab_hint"
            style="@style/FAB.MenuItem"
            app:srcCompat="@drawable/action_menu"
            tools:visibility="visible" />

        <com.kidscademy.quiz.view.RandomColorFAB
            android:id="@+id/game_fab_view_grid"
            style="@style/FAB.MenuItem"
            app:srcCompat="@drawable/action_apps"
            tools:visibility="visible" />

        <com.kidscademy.quiz.view.RandomColorFAB
            android:id="@+id/game_fab_skip_next"
            style="@style/FAB.MenuItem"
            app:srcCompat="@drawable/action_skip_next"
            tools:visibility="visible" />

        <com.kidscademy.quiz.view.RandomColorFAB
            android:id="@+id/game_fab_back"
            style="@style/FAB.MenuItem"
            app:srcCompat="@drawable/action_back"
            tools:visibility="visible" />
    </LinearLayout>

    <js.view.DialogOverlay
        android:id="@+id/game_unlock_level_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:closeButtonId="@id/fab_dialog_close" />

</FrameLayout>