<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kidscademy.quiz.activity.MainActivity">

    <include layout="@layout/compo_page_background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center_horizontal">

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_play"
                android:layout_width="128dp"
                android:layout_height="128dp"
                app:backgroundColor="#80ff8080"
                app:iconDrawable="@drawable/action_game"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_quiz"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="56dp"
                app:backgroundColor="#8020e8ca"
                app:iconDrawable="@drawable/action_quiz"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_balance"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginStart="200dp"
                app:backgroundColor="#8040b5ff"
                app:iconDrawable="@drawable/action_balance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_volume"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="114dp"
                app:backgroundColor="#803358be"
                app:iconDrawable="@drawable/action_sounds_enable"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/main_balance" />
        </android.support.constraint.ConstraintLayout>

        <include
            layout="@layout/compo_app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_about"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="64dp"
                app:backgroundColor="#8040b5ff"
                app:iconDrawable="@drawable/action_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_editor_absoluteY="0dp" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_no_ads"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="36dp"
                app:backgroundColor="#8040b5ff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_recommended"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="72dp"
                app:backgroundColor="#80039d76"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_share"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="110dp"
                app:backgroundColor="#8053acb6"
                app:iconDrawable="@drawable/action_share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_rate"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="128dp"
                android:layout_marginTop="108dp"
                app:backgroundColor="#8069e68f"
                app:iconDrawable="@drawable/action_rate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_settings"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="192dp"
                android:layout_marginTop="72dp"
                app:backgroundColor="#803358be"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_close"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="256dp"
                android:layout_marginTop="108dp"
                app:backgroundColor="#80ff8080"
                app:iconDrawable="@drawable/action_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</FrameLayout>